GET envelope's recipients
