# swagger.json
@@ -144,6 +144,63 @@
             }
           }
         }
+      },
+      "/envelopes/{envelopeId}/recipients": {
+        "get": {
+          "summary": "Get all the recipients of an envelope",
+          "security": [
+            { "Bearer": [] }
+          ],
+          "parameters": [
+            {
+              "in": "path",
+              "name": "envelopeId",
+              "description": "Envelope ID.",
+              "required": true,
+              "type": "string"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "Envelope recipients",
+              "schema": {
+                "type": "object",
+                "properties":{
+                  "data": {
+                    "type": "object",
+                    "properties": {
+                      "signers": {
+                        "type": "array",
+                        "items": {
+                          "$ref": "#/definitions/Signers"
+                        }
+                      },
+                      "agents": {"type": "string"},
+                      "editors": {"type": "string"},
+                      "intermediaries": {"type": "string"},
+                      "carbonCopies": {"type": "string"},
+                      "certifiedDeliveries": {"type": "string"},
+                      "inPersonSigners":{"type": "string"},
+                      "seals": {"type": "string"},
+                      "witnesses": {"type": "string"},
+                      "recipientCount": {"type": "integer", "example": "1"},
+                      "currentRoutingOrder": {"type": "integer", "example": "1"}
+                    } 
+                  }
+                }
+              }
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "404": {
+              "description": "Not found"
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          }
+        }
       }
     },
     "definitions": {
@@ -181,6 +238,27 @@
             }
           }
         }  
+      },
+      "Signers": {
+        "type": "object",
+        "properties": {
+          "creationReason": {"type": "string", "example": "sender"},
+          "canSignOffline": {"type": "string", "example": "false"},
+          "isBulkRecipient": {"type": "string", "example": "false"},
+          "recipientSuppliesTabs": {"type": "string", "example": "true"},
+          "name": {"type": "string", "example": "sample name"},
+          "email": {"type": "string", "example": "sample-email@domain.com"},
+          "recipientId": {"type": "number", "example": "11145477"},
+          "recipientIdGuid": {"type": "string", "example": "e0b1415a-1692-49e0-8080-cc5090247bbd"},
+          "requireIdLookup": {"type": "string", "example": "false"},
+          "userId": {"type": "string", "example": "59f4d35e-3fed-44ad-acce-7cb6682efa5b"},
+          "routingOrder": {"type": "integer", "example": "1"},
+          "note": {"type": "string", "example": ""},
+          "status": {"type": "string", "example": "completed"},
+          "signedDateTime": {"type": "string", "example": "2020-08-05T12:22:39.8400000Z"},
+          "deliveredDateTime": {"type": "string", "example": "2020-08-05T12:21:30.6730000Z"},
+          "deliveryMethod": {"type": "string", "example": "email"}
+        }
       },
       "Template": {
         "type": "object",
